# driftdriver

./: .gitignore  AGENTS.md  CLAUDE.md  DRIFT_PLUGIN_CONTRACT.md  MODULE_GUIDE.md  NORTH_STAR.md  README.md  RIFT_PLUGIN_CONTRACT.md  pyproject.toml
.driftdriver/: upstream-config.toml  upstream-pins.toml  upstream-tracker-last.json
.workgraph/: drift-policy.toml  follow-ups-lifecycle-parity.md
docs/: claude-code-leak-patterns.md  dispatch-pipeline-audit.md  drift-lane-audit.md  ecosystem-review.example.json  lane-roadmap.md  upstream-adoption-sentinel.md  upstream-wg-tracking.md
driftdriver/: _lanecommon.py  actor.py  adversarial_review.py  agency_score_reader.py  agency_speedrift_wrapper.py  attractor_loop.py  attractor_planner.py  attractors.py  authority.py  autopilot_state.py  budget_ledger.py  bundles.py  cli.py  cold_distillation.py  continuation.py  continuation_intent.py  contract_enrichment.py  contracts.py  contrariandrift.py  control_plane.py  decision_notifier.py  decision_queue.py  decompose.py  directive_schemas.py  directives.py  dispatch.py  drift_task_guard.py  ecosystem_hub.py  event_bridge.py  evolverdrift.py  execution_state.py  executor_shim.py  factory_report.py  factorydrift.py  governancedrift.py  health.py  hub_analytics.py  install.py  knowledge_priming.py  lane_contract.py  (+51 more)
launchd/: com.driftdriver.spend-watchdog.plist  com.driftdriver.zombie-reaper.plist
plists/: com.braydon.agency-serve.plist
scripts/: com.driftdriver.factory-telegram.plist  daily_ecosystem_eval.sh  dark-factory-stop.sh  dark-factory.sh  e2e_smoke.sh  ecosystem_hub.sh  ecosystem_hub_daemon.sh  ecosystem_hub_smoke.sh  eval_upstream_wg.sh  factory-brain-start.sh  factory-telegram-poller.sh  install_watchdogs.sh  monitor_upstream_wg.sh  n8n-decision-queue-workflow.json  n8n-factory-chatbot-workflow.json  n8n-intelligence-notifications-workflow.json  notify-macos.sh  package_app.sh  project_autopilot.sh  push_agent_instructions.py  reap_zombies.sh  refresh-workgraph-repos.sh  run_ecosystem_review.sh
tests/: test_activity_api.py  test_activity_cache.py  test_activity_scanner.py  (+207 more)
(+221 files in other folders)
