[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driftdriver"
version = "0.1.0"
description = "Workgraph-first drift orchestrator (Speedrift suite)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "speedrift-lane-sdk @ git+https://github.com/dbmcco/speedrift-lane-sdk.git",
]

[project.optional-dependencies]
dev = ["pytest>=9.0"]

[project.scripts]
driftdriver = "driftdriver.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["driftdriver*"]

[tool.uv.sources]
speedrift-lane-sdk = { git = "https://github.com/dbmcco/speedrift-lane-sdk.git" }
