[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driftdriver"
version = "0.1.0"
description = "Workgraph-first drift orchestrator (Speedrift suite)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2",
    "speedrift-lane-sdk @ git+https://github.com/dbmcco/speedrift-lane-sdk.git",
]

[project.optional-dependencies]
dev = ["pytest>=9.0"]

[project.scripts]
driftdriver = "driftdriver.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["driftdriver*"]

[tool.setuptools.package-data]
"driftdriver.intelligence" = ["migrations/*.sql"]

[tool.pytest.ini_options]
python_classes = ["Test*", "*Tests"]

[tool.uv.sources]
speedrift-lane-sdk = { git = "https://github.com/dbmcco/speedrift-lane-sdk.git" }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
]
